Stuff from second class

--- a/notebooks/FirstClass.ipynb
+++ b/notebooks/FirstClass.ipynb
@@ -17,15 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d76a51e2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3891726751.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpip freeze > requirements.txt\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
      ]
     }
    ],
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "1da73812",
    "metadata": {},
    "outputs": [
@@ -199,7 +200,8 @@
      "output_type": "stream",
      "text": [
       "11\n",
-      "20\n"
+      "20\n",
+      "2.0\n"
      ]
     }
    ],
@@ -211,15 +213,19 @@
     "b = 10\n",
     "b *= 2      # Equivalent to b = b * 2\n",
     "\n",
+    "c = 10\n",
+    "c /= 5      # Equivalent to c = c / 5\n",
+    "\n",
     "print(a)\n",
     "print(b)\n",
+    "print(c)\n",
     "\n",
     "# We rewrite the variable 'b' from a boolean to an integer; python does this automatically"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "41c10dec",
    "metadata": {},
    "outputs": [
@@ -255,8 +261,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "14521a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Logical (and ; or)\n",
+    "print(cislo > 5 and cislo2 == 11)\n",
+    "print(cislo > 5 or cislo2 == 5)\n",
+    "\n",
+    "print((cislo > 5 or cislo2 == 5) and cislo != 58)\n",
+    "\n",
+    "print(not(cislo == 10))     # Function not() changes the boolean to the opposite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5cce166",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "10\n",
+      "19\n",
+      "3.14\n",
+      "5.0\n",
+      "Dominik\n",
+      "Ahoj\n",
+      "Ahoj\n",
+      "Moje oblubene cislo je: 15.7\n",
+      "Moje oblubene cislo je:15.7\n",
+      "Moje oblubene cislo je: 15.7\n",
+      "False\n",
+      "True\n",
+      "7\n",
+      "4\n",
+      "2\n",
+      "23\n",
+      "11.5\n",
+      "3.5\n",
+      "True\n",
+      "False\n",
+      "☺️\n",
+      "Nahodne cislo: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercises\n",
+    "#1\n",
+    "a = 7\n",
+    "print(a)\n",
+    "b=3\n",
+    "print(a+b)\n",
+    "\n",
+    "#2\n",
+    "rok=2006\n",
+    "print(2025-rok)\n",
+    "pi=3.14\n",
+    "print(pi)\n",
+    "\n",
+    "#3\n",
+    "cm=500\n",
+    "m=cm/100\n",
+    "print(m)\n",
+    "meno = 'Dominik'\n",
+    "print(meno)\n",
+    "\n",
+    "#4\n",
+    "pozdrav='Ahoj'\n",
+    "print(pozdrav)      # Print twice in two rows (once per row)\n",
+    "print(pozdrav)\n",
+    "veta='Moje oblubene cislo je:'\n",
+    "cislo=15.7\n",
+    "print(veta, cislo)      # Print out string and float together without transformation\n",
+    "#print(veta + cislo)        # Error: string + float cannoy be printed this way\n",
+    "print(veta + str(cislo))        # Transforming float to string\n",
+    "print(veta + \" \" + str(cislo))      # Print with space\n",
+    "\n",
+    "#5\n",
+    "weatherIsCloudy = False\n",
+    "porovnanie = 5 == 6\n",
+    "print(porovnanie)        # Compare two numerical values and print out result\n",
+    "v=5>10 or 5<10\n",
+    "print(v)\n",
+    "\n",
+    "#6\n",
+    "a=5\n",
+    "sum=a+2\n",
+    "print(sum)\n",
+    "print(10-3*2)\n",
+    "\n",
+    "#7\n",
+    "a=17\n",
+    "print(a%5)      # Result is the remainder after division\n",
+    "cislo=22\n",
+    "add=1\n",
+    "cislo+=add      # Adds the value of \"add\" to \"cislo\"\n",
+    "print(cislo)\n",
+    "divide=2\n",
+    "cislo/=divide\n",
+    "print(cislo)        # Divides the value of \"cislo\" by the value of \"divide\"\n",
+    "\n",
+    "#8\n",
+    "cislo=2\n",
+    "cislo+=5\n",
+    "cislo/=2\n",
+    "print(cislo)\n",
+    "pravda1=cislo == 3.5\n",
+    "pravda2=6>5\n",
+    "print(pravda1 and pravda2)\n",
+    "\n",
+    "#9\n",
+    "boo=True\n",
+    "print(not(boo))\n",
+    "\n",
+    "#pip install emoji      # Can be run here or in console - rather use console\n",
+    "import emoji        # Using emoji library\n",
+    "print(emoji.emojize(\":smiling_face:\"))\n",
+    "\n",
+    "#10\n",
+    "#pip install random\n",
+    "import random       # Using random library\n",
+    "a = random.randint(1, 6)        # Generates random integer from the range 1-6\n",
+    "print(\"Nahodne cislo:\", a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5efd4e57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f79da88",
    "metadata": {},
    "outputs": [],
    "source": []
